test/testPrint/print4.rask
main() -> void
{
    print(1, 2);
}

